--- a/RuM/.project
+++ b/RuM/.project
@@ -3,6 +3,7 @@
 	<name>RuM</name>
 	<comment></comment>
 	<projects>
+		<project>RuM_Database</project>
 	</projects>
 	<buildSpec>
 		<buildCommand>
