--- a/RuM_Administration/.project
+++ b/RuM_Administration/.project
@@ -3,6 +3,7 @@
 	<name>RuM_Administration</name>
 	<comment></comment>
 	<projects>
+		<project>RuM_Database</project>
 	</projects>
 	<buildSpec>
 		<buildCommand>
