Store plugins in folder specified by plugin_path system parameter

--- a/RuM_Plugins/.project
+++ b/RuM_Plugins/.project
@@ -3,6 +3,7 @@
 	<name>RuM_Plugins</name>
 	<comment></comment>
 	<projects>
+		<project>RuM_Administration</project>
 		<project>RuM_Database</project>
 	</projects>
 	<buildSpec>
