--- a/RuM_Workspace/.project
+++ b/RuM_Workspace/.project
@@ -3,6 +3,7 @@
 	<name>RuM_Workspace</name>
 	<comment></comment>
 	<projects>
+		<project>RuM_Database</project>
 	</projects>
 	<buildSpec>
 		<buildCommand>
