--- a/RuM_Plugins/.project
+++ b/RuM_Plugins/.project
@@ -4,6 +4,7 @@
 	<comment></comment>
 	<projects>
 		<project>RuM_Database</project>
+		<project>RuM_Plugins_Interfaces</project>
 	</projects>
 	<buildSpec>
 		<buildCommand>
