Initial fiddling with gson. Renaming of interfaces bundle.

--- a/RuM_Plugins_Interfaces/.project
+++ b/RuM_Plugins_Interfaces/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>RuM_Plugins_Interfaces</name>
+	<name>RuM_Plugin_Development</name>
 	<comment></comment>
 	<projects>
 	</projects>
