--- a/RuM_Workspace/.project
+++ b/RuM_Workspace/.project
@@ -5,6 +5,7 @@
 	<projects>
 		<project>RuM_Database</project>
 		<project>RuM_Plugin_Development</project>
+		<project>RuM_Scheduler</project>
 	</projects>
 	<buildSpec>
 		<buildCommand>
