Moved plugin configuration UI to separate bundle
Reason is that configuration UI will require database access

--- a/RuM_Plugin_Configuration/.project
+++ b/RuM_Plugin_Configuration/.project
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>RuM_Plugins</name>
+	<name>RuM_Plugin_Configuration</name>
 	<comment></comment>
 	<projects>
 		<project>RuM_Database</project>
-		<project>RuM_Plugin_Configuration</project>
 		<project>RuM_Plugin_Development</project>
 	</projects>
 	<buildSpec>
