--- a/RuM/.project
+++ b/RuM/.project
@@ -4,6 +4,7 @@
 	<comment></comment>
 	<projects>
 		<project>RuM_Administration</project>
+		<project>RuM_Controller</project>
 		<project>RuM_Database</project>
 		<project>RuM_Plugins</project>
 		<project>RuM_Workspace</project>
