Fiddling with updating ui instances trough controller

--- a/RuM_Controller/.project
+++ b/RuM_Controller/.project
@@ -3,6 +3,7 @@
 	<name>RuM_Controller</name>
 	<comment></comment>
 	<projects>
+		<project>RuM_Database</project>
 	</projects>
 	<buildSpec>
 		<buildCommand>
