--- a/RuM/.project
+++ b/RuM/.project
@@ -7,6 +7,7 @@
 		<project>RuM_Controller</project>
 		<project>RuM_Database</project>
 		<project>RuM_Plugins</project>
+		<project>RuM_Scheduler</project>
 		<project>RuM_Workspace</project>
 	</projects>
 	<buildSpec>
