--- a/RuM_Plugin_Configuration/.project
+++ b/RuM_Plugin_Configuration/.project
@@ -3,6 +3,7 @@
 	<name>RuM_Plugin_Configuration</name>
 	<comment></comment>
 	<projects>
+		<project>RuM_Controller</project>
 		<project>RuM_Database</project>
 		<project>RuM_Plugin_Development</project>
 	</projects>
